# block-detection-annotator

./: BoostTest.cpp  KinectBridgeWithMATLABBasics-D2D.rc  KinectBridgeWithMATLABBasics-D2D.sln  KinectBridgeWithMATLABBasics-D2D.vcxproj  KinectBridgeWithMATLABBasics-D2D.vcxproj.filters  MainWindow.cpp  MainWindow.h  MatlabHelper.cpp  MatlabHelper.h  README.md  resource.h
Boost_Python_Build/: Boost_Python_Build.cpp  CMakeLists.txt
Boost_Python_Deploy/: Boost_Python_Deploy.cpp  Boost_Python_Deploy.vcxproj  Boost_Python_Deploy.vcxproj.filters
